--- a/build.gradle
+++ b/build.gradle
@@ -4,7 +4,6 @@ buildscript {
     repositories {
         google()
         jcenter()
-
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:3.5.1'
@@ -17,7 +16,10 @@ allprojects {
     repositories {
         google()
         jcenter()
-
+        maven{
+            url 'https://maven.google.com/'
+        }
+        mavenCentral()
     }
 }
 
