--- a/build.gradle
+++ b/build.gradle
@@ -16,7 +16,7 @@ allprojects {
     repositories {
         google()
         jcenter()
-        mavenCentral()
+        maven { url 'https://maven.google.com' }
     }
 }
 
