--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,4 +34,5 @@ dependencies {
     implementation 'androidx.cardview:cardview:1.0.0'
     implementation 'com.android.support:design:28.1.0'
     implementation files('libs/glide-3.6.0.jar')
+    implementation files('libs/YouTubeAndroidPlayerApi.jar')
 }
