--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,28 +15,32 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".MainActivity">
+        <activity android:name=".MainActivity"
+            android:configChanges="orientation|keyboardHidden|screenSize|layoutDirection">
             <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
+                <action android:name="android.intent.action.MAIN"/>
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
         <activity android:name=".LoginActivity"
-            android:parentActivityName=".MainActivity">
+            android:parentActivityName=".MainActivity"
+            android:configChanges="orientation|keyboardHidden|screenSize|layoutDirection">
             <intent-filter>
                 <action android:name="android.intent.action.LOGIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
         <activity android:name=".SeasonBangumiActivity"
-            android:parentActivityName=".MainActivity">
+            android:parentActivityName=".MainActivity"
+            android:configChanges="orientation|keyboardHidden|screenSize|layoutDirection">
             <intent-filter>
                 <action android:name="android.intent.action.SEASONBANGUMI" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".DetailActivity">
+        <activity android:name=".DetailActivity"
+            android:configChanges="orientation|keyboardHidden|screenSize|layoutDirection">
             <intent-filter>
                 <action android:name="android.intent.action.BANGUMI_DETAIL" />
 
@@ -44,6 +48,7 @@
             </intent-filter>
         </activity>
         <activity android:name=".UserActivity"
+            android:configChanges="orientation|keyboardHidden|screenSize|layoutDirection"
             android:theme="@style/UserActivityNaviBarTextStyle"
             android:parentActivityName=".MainActivity"
             android:launchMode="singleTop">
@@ -54,6 +59,7 @@
             </intent-filter>
         </activity>
         <activity android:name=".SelectImageActivity"
+            android:configChanges="orientation|keyboardHidden|screenSize|layoutDirection"
             android:parentActivityName=".UserActivity">
             <intent-filter>
                 <action android:name="android.intent.action.SELECT_IMAGE" />
